force-app/main/default/objects/Opportunity_Solution_Detail__c/Opportunity_Solution_Detail__c.object-meta.xml
<CustomObject>
    <description>SAL26-1450 - Object to capture structured Solution Detail information for MSP Opportunities</description>
    <label>Opportunity Solution Detail</label>
    <nameField>
        <displayFormat>OS-{00000}</displayFormat>
        <label>Opportunity Solution Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Solution Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>