force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Archive_as_a_Service__c.field-meta.xml
<CustomField>
    <fullName>Archive_as_a_Service__c</fullName>
    <description>SAL26-1450 - Indicates whether archiving capabilities are part of the proposed solution, helping assess long-term data retention and compliance use cases.</description>
    <label>Archive as a Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>