force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/BUaaS_Cloud__c.field-meta.xml
<CustomField>
    <fullName>BUaaS_Cloud__c</fullName>
    <description>SAL26-1450 - Identifies whether Backup as a Service (BUaaS) for cloud workloads is included in the opportunity, supporting cloud strategy alignment and reporting.</description>
    <label>BUaaS – Cloud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>