force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/BUaaS_On_Prem__c.field-meta.xml
<CustomField>
    <fullName>BUaaS_On_Prem__c</fullName>
    <description>SAL26-1450 - Indicates whether Backup as a Service (BUaaS) for on-premises workloads is part of the opportunity, enabling use-case level tracking and adoption analysis.</description>
    <label>BUaaS – On-Prem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>