force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/CEM_Assigned__c.field-meta.xml
<CustomField>
    <fullName>CEM_Assigned__c</fullName>
    <description>SAL26-1450 - Indicates whether a Customer Engagement Manager (CEM) is assigned, supporting engagement ownership, delivery readiness, and post-sale coordination.</description>
    <label>CEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>