force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Cyber_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Cyber_Recovery__c</fullName>
    <description>SAL26-1450 - Identifies whether cyber recovery capabilities are part of the solution, enabling tracking of security-driven opportunities and ransomware readiness.</description>
    <label>Cyber Recovery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>