force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Deployment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Comments__c</fullName>
    <description>SAL26-1450 - Free-text notes providing additional context or justification for the selected deployment model.</description>
    <label>Comments for Deployment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>