force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Deployment_Model__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Model__c</fullName>
    <description>SAL26-1450 - Defines how the solution will be deployed. Drives architectural approvals, security review, and implementation constraints.</description>
    <label>Deployment Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multi-tenant</fullName>
            </value>
            <value>
                <fullName>Dedicated</fullName>
            </value>
            <value>
                <fullName>Customer Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>