force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Disaster_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Recovery__c</fullName>
    <description>SAL26-1450 - Indicates whether disaster recovery capabilities are included, supporting resilience assessment, solution positioning, and deal prioritization.</description>
    <label>Disaster Recovery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>