force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Disti_Approved_for_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Disti_Approved_for_Consumption__c</fullName>
    <description>SAL26-1450 - Indicates whether the distributor is approved for consumption-based transactions, supporting deal eligibility validation and compliance checks.</description>
    <label>Disti Approved for Consumption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>