force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <description>SAL26-1450 - Captures the name of the assigned executive sponsor to support accountability, escalation management, and strategic alignment for the opportunity.</description>
    <label>Named Executive Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>