force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Governance_Framework__c.field-meta.xml
<CustomField>
    <fullName>Governance_Framework__c</fullName>
    <description>SAL26-1450 - Identifies whether a formal governance framework exists for the partner, enabling compliance validation, risk assessment, and operational oversight.</description>
    <label>Governance Framework</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>