force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Identity__c.field-meta.xml
<CustomField>
    <fullName>Identity__c</fullName>
    <description>SAL26-1450 - Identifies whether identity-related protection or integrations are included in the opportunity, supporting security alignment and dependency tracking.</description>
    <label>Identity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>