force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Isolated_Recovery_Environment__c.field-meta.xml
<CustomField>
    <fullName>Isolated_Recovery_Environment__c</fullName>
    <description>SAL26-1450 - Indicates whether an isolated recovery environment is part of the solution, supporting advanced cyber resilience and compliance requirements.</description>
    <label>Isolated Recovery Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>