force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/License_Model_Shared_v_Dedicated__c.field-meta.xml
<CustomField>
    <fullName>License_Model_Shared_v_Dedicated__c</fullName>
    <description>SAL26-1450 - Defines whether licensing is shared or dedicated. Impacts pricing, provisioning, and entitlement logic.</description>
    <label>License Model (Shared v Dedicated)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Dedicated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>