force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <description>SAL26-1450 - Specifies the commercial licensing model selected for the deal. Used for billing alignment and downstream integrations.</description>
    <label>License Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PayGo - Commit</fullName>
            </value>
            <value>
                <fullName>PayGo - No Commit</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>