force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/M365__c.field-meta.xml
<CustomField>
    <fullName>M365__c</fullName>
    <description>SAL26-1450 - Identifies whether Microsoft 365 workloads are in scope for the opportunity, supporting SaaS protection tracking and license planning.</description>
    <label>M365</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>