force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/MDF_BDF__c.field-meta.xml
<CustomField>
    <fullName>MDF_BDF__c</fullName>
    <description>SAL26-1450 - Indicates whether Marketing or Business Development Funds are involved in the deal for tracking and approval purposes.</description>
    <label>M/BDF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>