force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Mitigations_Workarounds__c.field-meta.xml
<CustomField>
    <fullName>Mitigations_Workarounds__c</fullName>
    <description>SAL26-1450 - Documents mitigation strategies or workarounds identified to address the stated roadblocks, supporting deal recovery and knowledge sharing.</description>
    <label>Mitigations – Workarounds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>