force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>SAL26-1450 - Opp Associate with Opportunity Solution Detail</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Solution Details</relationshipLabel>
    <relationshipName>Opportunity_Solution_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>