force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Partner_Size__c.field-meta.xml
<CustomField>
    <fullName>Partner_Size__c</fullName>
    <description>SAL26-1450 - Captures the partner’s business scale for enablement, governance, and reporting purposes</description>
    <label>Partner Size</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mid-size</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>