force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Partner_Website_Listing__c.field-meta.xml
<CustomField>
    <fullName>Partner_Website_Listing__c</fullName>
    <description>SAL26-1450 - Indicates whether Rubrik is listed on the partner’s website, helping track reciprocal marketing alignment and partnership maturity.</description>
    <label>Partner Website Listing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>