force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Primary_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Type__c</fullName>
    <description>SAL26-1450 - Identifies the primary customer segment for the opportunity. Drives segmentation, reporting, and conditional logic.</description>
    <label>Primary Customer Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise, SMB, Channel</fullName>
            </value>
            <value>
                <fullName>Enterprise, SMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>