force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Product_Deficiency__c.field-meta.xml
<CustomField>
    <fullName>Product_Deficiency__c</fullName>
    <description>SAL26-1450 - Captures details of any identified product gaps or deficiencies impacting the opportunity, supporting product feedback and roadmap prioritization.</description>
    <label>Product Deficiency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>