force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Revenue_At_Risk_ACV__c.field-meta.xml
<CustomField>
    <fullName>Revenue_At_Risk_ACV__c</fullName>
    <description>SAL26-1450 - Captures the estimated annual contract value (in millions) at risk due to identified challenges, supporting pipeline risk assessment and executive reporting.</description>
    <label>Revenue at Risk ($M) – ACV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>