force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Roadblocks_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Roadblocks_Additional_Comments__c</fullName>
    <description>SAL26-1450 - Provides additional context or explanation for the selected roadblock or limitation to support deeper analysis and resolution planning.</description>
    <label>Roadblocks – Additional Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>