force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Roadblocks_Limitations__c.field-meta.xml
<CustomField>
    <fullName>Roadblocks_Limitations__c</fullName>
    <description>SAL26-1450 - Identifies the primary blocker or limitation affecting the opportunity, enabling structured tracking, trend analysis, and mitigation planning.</description>
    <label>Roadblocks / Limitations</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Roadblock</fullName>
            </value>
            <value>
                <fullName>Technical-Product</fullName>
            </value>
            <value>
                <fullName>Limited Use Case</fullName>
            </value>
            <value>
                <fullName>Licensing, Deal Desk</fullName>
            </value>
            <value>
                <fullName>MSP Internal</fullName>
            </value>
            <value>
                <fullName>Field-Sales Conflict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>