force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Rubrik_Website_Listing__c.field-meta.xml
<CustomField>
    <fullName>Rubrik_Website_Listing__c</fullName>
    <description>SAL26-1450 - Indicates whether the partner is officially listed on the Rubrik website, supporting partner validation, visibility, and ecosystem alignment.</description>
    <label>Rubrik Website Listing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>