force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/StD_Enabled__c.field-meta.xml
<CustomField>
    <fullName>StD_Enabled__c</fullName>
    <description>SAL26-1450 - Indicates whether Standard-to-Deal (StD) enablement is active for the partner, supporting operational readiness tracking and consistent deal execution.</description>
    <label>StD Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>