force-app/main/default/objects/Opportunity_Solution_Detail__c/fields/Unstructured_Cloud_On_Prem__c.field-meta.xml
<CustomField>
    <fullName>Unstructured_Cloud_On_Prem__c</fullName>
    <description>SAL26-1450 - Indicates whether protection of unstructured data across cloud and on-prem environments is in scope, supporting capacity and architecture planning.</description>
    <label>Unstructured Cloud / On-Prem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>